# TripServiceCPP

./: CMakeLists.txt  Trip.h  TripDAO.h  TripDaoInstance.h  TripService.h  User.h  UserNotLoggedInException.h  UserSession.cpp  UserSession.h
tests/: CMakeLists.txt  TripServiceTests.cpp  gmock_catch_interceptor.cpp  gmock_catch_interceptor.hpp  main.cpp
tests/fakes/: FakeTripDAO.h  FakeUserSession.h
tests/helpers/: UserSessionAccessor.h
tests_catch_turtle/: CMakeLists.txt  TripServiceTests.cpp
tests_catch_turtle/fakes/: FakeTripDAO.h  FakeUserSession.h
tests_catch_turtle/helpers/: TripServiceForTests.h  UserSessionAccessor.h
tests_catch_turtle/turtle/: catch.hpp  version.hpp
